<resources>
    <string name="app_name">keySharing</string>
    <string name="BotonCifrar">Cifrar Archivo</string>
    <string name="botonvisualizar">Visualizar Fragmentos</string>
    <string name="FragmentosACrear">Ingresa el numero de secretos a crear(numero de participantes)</string>
    <string name="FragmentosMinimos">Ingresa el numero de fragmentos minimos para recuperar el secreto</string>
    <string name="botonRegresar">Regresar</string>

    <string name="botonSeleccionar">Seleccionar Archivo</string>
    <string name="NombreDeArchivo">Nombre Del Archivo</string>
    <string name="textoParaRepartirFragmentos">Seleccione el fragmento que desea compartir</string>
    <string name="Nombreynumerodefragmento">Nombre del fragmento y numero</string>
    <string name="textoSuperior">Acerque el dispositivo con el que quiere compartir este fragmento</string>
    <string name="textoInferior">En caso de cerrar la aplicacion estos fragmentos se perderan!!!!</string>
    /////////////
    <string name="botonAlmacenar">Almacenar</string>
    <string name="botonConcatenar">Concatenar</string>
    <string name="botonDescifrar">Descifrar</string>
    <string name="textoMensaje">Que quieres hacer con el fragmento?</string>
    <string name="enviar">Enviar</string>
    <string name="botoneliminar">Eliminar</string>
    <string name="QQH">Que quieres hacer?</string>

    <!--<string name=""></string>-->
</resources>
